# TauCetiReview

./: README.md  REVIEWING.md  SECURITY.md  ledger.json  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: merge-only.yml  merge-sweep.yml  review-smoke.yml  review.yml  shadow-review.yml  tests.yml
reviews/12/2/: correctness.json  proof-quality.json  reuse.json  scope.json  summary.md
reviews/12/4/: reuse.json  scope.json  summary.md
reviews/16/1/: correctness.json  proof-quality.json  reuse.json  scope.json  summary.md
reviews/16/2/: correctness.json  proof-quality.json  reuse.json  scope.json
reviews/17/1/: correctness.json  proof-quality.json  reuse.json  scope.json  summary.md
reviews/17/2/: reuse.json  scope.json  summary.md
reviews/19/1/: correctness.json  proof-quality.json  reuse.json  scope.json  summary.md
reviews/21/1/: correctness.json  proof-quality.json  reuse.json  scope.json  summary.md
reviews/22/1/: correctness.json  proof-quality.json  reuse.json  scope.json  summary.md
reviews/26/2/: api-design.json  scope.json  (+7 more)
rubrics/: README.md  _common.md  api-design.md  correctness.md  naming.md  placement.md  proof-quality.md  reuse.md  scope.md
rubrics/references/: naming-conventions.md
runner/: COSTS.md  REDESIGN.md  archive.py  cli.py  costs.py  merge_from_data.py  merge_from_scoreboard.py  post.py  prices-history.json  prices.json  pricing.py  render.py  review.py  reviewers.py  sweep.py
tests/: test_codex_fallback.py  test_coordinate.py  test_post.py  test_prices.py  test_prompt_refs.py  test_sweep.py  test_thread_states.py
(+44 files in other folders)
